snapshots/test_list__detached_head.snap
---
source: tests/test_list.rs
info:
  program: arbor
  args:
    - list
---
success: true
exit_code: 0
----- stdout -----
[REPO]
  HEAD: [SHA]
  (detached)


----- stderr -----
