snapshots/test_list__locked_no_reason.snap
---
source: tests/test_list.rs
info:
  program: arbor
  args:
    - list
---
success: true
exit_code: 0
----- stdout -----
[REPO]
  HEAD: [SHA]
  branch: main

[WORKTREE_LOCKED_NO_REASON]
  HEAD: [SHA]
  branch: locked-no-reason
  (locked)


----- stderr -----
