snapshots/test_list__single_worktree.snap
---
source: tests/test_list.rs
info:
  program: arbor
  args:
    - list
---
success: true
exit_code: 0
----- stdout -----
[REPO]
  HEAD: [SHA]
  branch: main


----- stderr -----
